--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
+title: Meher Bhaskar Madiraju
+description: A brief introduction about me.
 theme: jekyll-theme-minimal
-title: My Awesome Site
-description: This is a description of my website.
